// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Width > handles % value 1`] = `
{
  "classNames": [
    "_root_e999ba",
    [
      "_--type-literal_e999ba",
    ],
  ],
  "variables": {
    "--rs-w-s": "50%",
  },
}
`;

exports[`Styles/Width > handles px value 1`] = `
{
  "classNames": [
    "_root_e999ba",
    [
      "_--type-literal_e999ba",
    ],
  ],
  "variables": {
    "--rs-w-s": "50px",
  },
}
`;

exports[`Styles/Width > handles responsive value 1`] = `
{
  "classNames": [
    "_root_e999ba",
    [
      "_--type-literal_e999ba",
      "_--type-literal--l_e999ba",
    ],
  ],
  "variables": {
    "--rs-w-l": "50%",
    "--rs-w-s": "50px",
  },
}
`;

exports[`Styles/Width > handles undefined value 1`] = `null`;

exports[`Styles/Width > handles unit value 1`] = `
{
  "classNames": [
    "_root_e999ba",
    [
      "_--type-unit_e999ba",
    ],
  ],
  "variables": {
    "--rs-w-s": 5,
  },
}
`;
